--- a/public/css/spacing.css
+++ b/public/css/spacing.css
@@ -87,6 +87,9 @@
 /* Margin */
 
 /* All Side Margin */
+.m-auto {
+  margin: auto;
+}
 .m-0 {
   margin: 0;
 }
